# dms-pi

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  video_recorder_new.cpp
backup/: SESSION_LOG.md  dms-disk-cleanup.sh  dms-watchdog.sh
backup/dms/: dms_optimized.py  dms_optimized.py.bak
backup/video_recorder/: CMakeLists.txt  start.sh  video_recorder.cpp.bak
cmake/: FetchDeps.cmake
include/dms/: alert_service.h  app_state.h  camera_service.h  classifier.h  config.h  face_detector.h  gps_service.h  landmark_tracker.h  management_service.h  messages.h  ring_buffer.h  state_machine.h  storage_service.h  uplink_service.h
models/: download_models.sh  drowsiness_int8.tflite
scripts/: build.sh  build_tflite.sh  deploy.sh  install_deps.sh  setup_pi.sh
src/: alert_service.cpp  camera_service.cpp  classifier.cpp  config.cpp  face_detector.cpp  gps_service.cpp  landmark_tracker.cpp  main.cpp  management_service.cpp  messages.cpp  state_machine.cpp  storage_service.cpp  uplink_service.cpp
systemd/: dms.service
